--- a/ui/src/app/connect/components/runtime-info/pipeline-element-runtime-info.component.html
+++ b/ui/src/app/connect/components/runtime-info/pipeline-element-runtime-info.component.html
@@ -19,7 +19,7 @@
 <div *ngIf="!runtimeData && !runtimeDataError">
     <div fxLayout="column">
         <div fxLayoutAlign="center" >
-            <mat-spinner [diameter]="40" fxLayoutAlign="center" style="margin: 10px 0 5px 0" >Loading</mat-spinner>
+            <mat-spinner [diameter]="40" fxLayoutAlign="center" style="margin: 10px 0 5px 0" color="accent">Loading</mat-spinner>
         </div>
         <div fxLayoutAlign="center">
             <h3>Gathering data for live preview...</h3>
@@ -36,7 +36,7 @@
         </tr>
         </thead>
         <tbody id="preview-data-rows-id">
-        <tr *ngFor="let property of streamDescription.eventSchema.eventProperties">
+        <tr *ngFor="let property of streamDescription.eventSchema.eventProperties" class="preview-row">
             <td>{{property.runtimeName}}</td>
             <td *ngIf="isImage(property)"> <img src="data:image/png;base64,{{runtimeData[property.runtimeName]}}" style="max-width: 150px;" /> </td>
             <td *ngIf="isTimestamp(property)">{{runtimeData[property.runtimeName] | date:'yyyy-MM-dd HH:mm:ss '}}</td>
