--- a/ui/src/app/connect/components/runtime-info/pipeline-element-runtime-info.component.scss
+++ b/ui/src/app/connect/components/runtime-info/pipeline-element-runtime-info.component.scss
@@ -15,3 +15,12 @@
  * limitations under the License.
  *
  */
+
+.preview-row, .preview-table {
+  background: var(--color-bg-dialog);
+}
+
+.dataTable tbody tr:hover {
+  background: var(--color-bg-1);
+}
+
