--- a/ui/src/app/core-ui/static-properties/static-code-input/static-code-input.component.html
+++ b/ui/src/app/core-ui/static-properties/static-code-input/static-code-input.component.html
@@ -18,7 +18,7 @@
 
 <div fxFlex="100" fxLayout="column">
     <div fxFlex="100" fxLayout="row" fxLayoutAlign="start center">
-        <button mat-button mat-raised-button color="primary" class="small-button" (click)="resetCode()"
+        <button mat-button mat-raised-button color="accent" class="small-button" (click)="resetCode()"
                 style="margin-right:10px;margin-bottom:10px;">Reset code template
         </button>
     </div>
