--- a/ui/src/app/core-ui/static-properties/static-file-input/static-file-input.component.css
+++ b/ui/src/app/core-ui/static-properties/static-file-input/static-file-input.component.css
@@ -26,9 +26,9 @@ form {
 }
 
 .green-icon {
-    color: green;
+    color: var(--color-accent);
 }
 
 .green-icon svg {
-    fill: green;
+    fill: var(--color-accent);
 }
