--- a/ui/src/app/core-ui/static-properties/static-mapping-nary/static-mapping-nary.component.html
+++ b/ui/src/app/core-ui/static-properties/static-mapping-nary/static-mapping-nary.component.html
@@ -18,7 +18,7 @@
 
 <div id="formWrapper" fxFlex="100" fxLayout="column">
     <div fxFlex="100" fxLayoutAlign="start center">
-        <button mat-button mat-raised-button color="primary" class="small-button" (click)="selectAll()"
+        <button mat-button mat-raised-button color="accent" class="small-button" (click)="selectAll()"
                 style="margin-right:10px;margin-left:10px;">Select all
         </button>
         <button mat-button mat-raised-button class="mat-basic small-button" (click)="selectNone()">Select
