--- a/ui/src/app/core-ui/static-properties/static-runtime-resolvable-oneof-input/static-runtime-resolvable-oneof-input.component.html
+++ b/ui/src/app/core-ui/static-properties/static-runtime-resolvable-oneof-input/static-runtime-resolvable-oneof-input.component.html
@@ -18,7 +18,7 @@
 
 <div id="formWrapper" fxFlex="100" fxLayout="column">
     <div>
-        <button mat-button mat-raised-button color="primary" class="small-button"
+        <button mat-button mat-raised-button color="accent" class="small-button"
                 (click)="loadOptionsFromRestApi()"
                 style="margin-right:10px;margin-left:10px;" [disabled]="!showOptions">
             <span>Reload</span>
