--- a/ui/src/app/dashboard/components/overview/dashboard-overview.component.html
+++ b/ui/src/app/dashboard/components/overview/dashboard-overview.component.html
@@ -20,7 +20,7 @@
     <div fxFlex="100" fxLayout="column">
         <div fxLayout="row" class="fixed-height options-bar sp-tab-bg">
             <div class="options-bar-item pl-10" fxLayoutAlign="start center" fxLayout="row">
-                <button mat-button mat-raised-button color="primary" (click)="openNewDashboardDialog()">
+                <button mat-button mat-raised-button color="accent" (click)="openNewDashboardDialog()">
                     <i class="material-icons">add</i>
                    <span> New dashboard</span>
                 </button>
