--- a/ui/src/app/profile/components/general/general-profile-settings.component.html
+++ b/ui/src/app/profile/components/general/general-profile-settings.component.html
@@ -38,7 +38,7 @@
                     <input [(ngModel)]="userData.fullName" matInput/>
                 </mat-form-field>
                 <div>
-                    <button mat-button mat-raised-button color="primary"
+                    <button mat-button mat-raised-button color="accent"
                         (click)="saveProfileSettings()">
                         Update profile
                     </button>
