--- a/ui/src/scss/sp/feedback.ng1.scss
+++ b/ui/src/scss/sp/feedback.ng1.scss
@@ -20,14 +20,13 @@
 
 .feedback-container {
   font-size:14pt;
-  background: var(--color-bg-0);
   height: 600px;
   z-index: 100;
   //border-left: 2px solid $sp-color-primary;
   //border-bottom: 2px solid $sp-color-primary;
   //border-right: 2px solid $sp-color-primary;
   padding:24px;
-  //color:black;
+  color: var(--color-default-text);
 }
 
 .feedback-width-100 {
@@ -45,7 +44,7 @@
 .feedback-title {
   font-size:20pt;
   font-weight:bold;
-  color: $sp-color-accent;
+  color: var(--color-accent);
   text-align: center;
 }
 
