--- a/ui/src/app/add/dialogs/add-endpoint/add-endpoint.component.html
+++ b/ui/src/app/add/dialogs/add-endpoint/add-endpoint.component.html
@@ -27,7 +27,7 @@
                     </div>
                     <div class="md-list-item-text" fxFlex="20" fxLayout="column">
                         <button mat-button mat-flat-button (click)="removeRdfEndpoint(rdfEndpoint._id)">
-                            <mat-icon color="primary">delete</mat-icon>
+                            <mat-icon color="accent">delete</mat-icon>
                         </button>
                     </div>
                 </div>
@@ -41,7 +41,7 @@
                             <input matInput type="text" [(ngModel)]="newEndpoint.endpointUrl">
                         </mat-form-field>
                     </div>
-                    <div class="md-list-item-text" flex="20" layout="column">
+                    <div class="md-list-item-text" fxFlex="20" fxlayout="column">
                         <button mat-button mat-flat-button (click)="addRdfEndpoint(newEndpoint)">
                             <mat-icon>save</mat-icon>
                         </button>
@@ -50,7 +50,7 @@
             </div>
         </div>
         <div style="margin-top:10px;">
-            <button mat-button mat-raised-button color="primary" (click)="showAddInput()">Add Category</button>
+            <button mat-button mat-raised-button color="accent" (click)="showAddInput()">Add Category</button>
         </div>
     </div>
     <mat-divider></mat-divider>
