--- a/ui/src/app/core-ui/static-properties/static-file-input/static-file-input.component.html
+++ b/ui/src/app/core-ui/static-properties/static-file-input/static-file-input.component.html
@@ -19,7 +19,7 @@
 <div fxFlex="100" fxLayout="column">
     <div fxFlex="100" fxLayout="column">
         <div fxFlex="row">
-            <mat-radio-group [(ngModel)]="chooseExistingFile" color="primary">
+            <mat-radio-group [(ngModel)]="chooseExistingFile" color="accent">
                 <mat-radio-button style="margin-right:10px;" [value]="true">Choose existing file</mat-radio-button>
                 <mat-radio-button [value]="false">Upload new file</mat-radio-button>
             </mat-radio-group>
@@ -53,7 +53,7 @@
                 </div>
 
 
-                <button color="primary" matSuffix
+                <button color="accent" matSuffix
                         mat-button style="min-width: 0px">
                     <mat-icon *ngIf="uploadStatus < 99">insert_drive_file</mat-icon>
                     <mat-icon *ngIf="uploadStatus == 100" class="green-icon">check_circle</mat-icon>
@@ -66,7 +66,7 @@
             </mat-form-field>
             <!--<div fxLayoutAlign="center none">-->
             <div>
-                <button color="primary" mat-raised-button (click)="upload()" [disabled]="!fileName">
+                <button color="accent" mat-raised-button (click)="upload()" [disabled]="!fileName">
                     Upload
                 </button>
             </div>
