--- a/ui/src/app/dashboard/components/panel/dashboard-panel.component.css
+++ b/ui/src/app/dashboard/components/panel/dashboard-panel.component.css
@@ -32,8 +32,7 @@
 
 .options-bar {
     padding:0px;
-    background-color:#f6f6f6;
-    border-bottom: 1px solid #cccccc;
+    border-bottom: 1px solid var(--color-bg-2);
     margin-bottom: 10px;
     height: 50px;
 }
