--- a/ui/src/app/editor/components/pipeline-element-preview/pipeline-element-preview.component.html
+++ b/ui/src/app/editor/components/pipeline-element-preview/pipeline-element-preview.component.html
@@ -18,12 +18,12 @@
 
 <div class="data-preview">
     <div *ngIf="!runtimeData" fxFlex="100" fxLayout="column" fxLayoutAlign="center center">
-        <mat-spinner [diameter]="20"></mat-spinner>
+        <mat-spinner [diameter]="20" color="accent"></mat-spinner>
         <span class="preview-table mt-10">Waiting for live data...</span>
     </div>
     <table class="dataTable row-border hover preview-table" *ngIf="runtimeData">
         <tbody id="preview-data-rows-id">
-        <tr *ngFor="let item of runtimeData | keyvalue">
+        <tr *ngFor="let item of runtimeData | keyvalue" class="preview-row">
             <td>{{item.key}}</td>
             <td><b>{{item.value}}</b></td>
         </tr>
