--- a/ui/src/app/editor/components/pipeline-element-preview/pipeline-element-preview.component.scss
+++ b/ui/src/app/editor/components/pipeline-element-preview/pipeline-element-preview.component.scss
@@ -22,7 +22,7 @@
   top: 120px;
   width: 250px;
   height: 120px;
-  background: white;
+  background: var(--color-bg-dialog);
   overflow: auto;
   border: 1px solid gray;
   box-shadow: 0.175em 0.175em 0 0 rgba(15, 28, 63, 0.125);
@@ -36,3 +36,12 @@
 .mt-10 {
   margin-top: 10px;
 }
+
+.preview-row, .preview-table {
+  background: var(--color-bg-dialog);
+}
+
+.dataTable tbody tr:hover {
+  background: var(--color-bg-1);
+}
+
