--- a/ui/src/app/editor/dialog/help/help.component.scss
+++ b/ui/src/app/editor/dialog/help/help.component.scss
@@ -17,3 +17,12 @@
  */
 
 @import '../../../../scss/sp/sp-dialog.scss';
+
+.preview-row, .preview-table {
+  background: var(--color-bg-dialog);
+}
+
+.dataTable tbody tr:hover {
+  background: var(--color-bg-1);
+}
+
