--- a/ui/src/app/files/components/file-overview/file-overview.component.html
+++ b/ui/src/app/files/components/file-overview/file-overview.component.html
@@ -40,7 +40,7 @@
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef> Action</th>
             <td mat-cell *matCellDef="let fileMetadata">
-                    <button color="primary" mat-button mat-icon-button matTooltip="Delete file" matTooltipPosition="above"
+                    <button color="accent" mat-button mat-icon-button matTooltip="Delete file" matTooltipPosition="above"
                             (click)="deleteFile(fileMetadata)">
                         <i class="material-icons">delete</i>
                     </button>
