--- a/ui/src/app/files/components/file-overview/file-overview.component.scss
+++ b/ui/src/app/files/components/file-overview/file-overview.component.scss
@@ -17,19 +17,19 @@
  */
 
 .mat-table {
-  background: #FAFAFA;
+  //background: #FAFAFA;
 }
 
 .mat-paginator {
   border-top: 1px solid rgba(0,0,0,.12);
-  background: #FAFAFA;
+  //background: #FAFAFA;
 }
 
 .mat-row:nth-child(even) {
-  background-color: #FAFAFA;
+  background-color: var(--color-bg-2);
 }
 .mat-row:nth-child(odd) {
-  background-color:#ffffff;
+  background-color: var(--color-bg-3);
 }
 
 .filetype-container {
