--- a/ui/src/app/files/files.component.html
+++ b/ui/src/app/files/files.component.html
@@ -21,7 +21,7 @@
         <div fxFlex="100" class="page-container-nav">
             <div fxFlex="100" fxLayout="row">
                 <div fxFlex fxLayoutAlign="start center">
-                    <mat-tab-group>
+                    <mat-tab-group color="accent">
                         <mat-tab label="Files"></mat-tab>
                     </mat-tab-group>
                 </div>
@@ -31,7 +31,7 @@
     <div fxLayout="row" class="fixed-height add-options sp-tab-bg">
         <div class="add-options-item" fxLayoutAlign="start center" fxLayout="row" style="padding-left:5px;">
             <div fxFlex="100" fxLayout="row">
-                <button mat-button mat-raised-button color="primary"
+                <button mat-button mat-raised-button color="accent"
                         (click)="openFileUploadDialog()" class="mr-10">
                     <i class="material-icons">cloud_upload</i>
                     &nbsp;Upload new file
