--- a/ui/src/app/pipelines/components/pipeline-overview/pipeline-overview.component.html
+++ b/ui/src/app/pipelines/components/pipeline-overview/pipeline-overview.component.html
@@ -40,12 +40,12 @@
         <ng-container matColumnDef="start">
             <th mat-header-cell *matHeaderCellDef> Start</th>
             <td mat-cell *matCellDef="let pipeline">
-                <button color="primary" mat-button mat-icon-button matTooltip="Start pipeline" matTooltipPosition="above"
+                <button color="accent" mat-button mat-icon-button matTooltip="Start pipeline" matTooltipPosition="above"
                         (click)="pipelineOperationsService.startPipeline(pipeline._id, refreshPipelinesEmitter, toggleRunningOperation)"
                         [disabled]="starting" *ngIf="!pipeline.running">
                     <i class="material-icons">play_arrow</i>
                 </button>
-                <button color="primary" mat-button mat-icon-button matTooltip="Stop pipeline" matTooltipPosition="above"
+                <button color="accent" mat-button mat-icon-button matTooltip="Stop pipeline" matTooltipPosition="above"
                         (click)="pipelineOperationsService.stopPipeline(pipeline._id, refreshPipelinesEmitter, toggleRunningOperation)"
                         [disabled]="stopping" *ngIf="pipeline.running">
                     <i class="material-icons">stop</i>
@@ -73,20 +73,20 @@
             <td mat-cell *matCellDef="let pipeline">
                 <div fxLayout="row">
                 <span fxFlex fxFlexOrder="1" fxLayout="row" fxLayoutAlign="center center">
-                    <button  color="primary"mat-button mat-icon-button matTooltip="Show pipeline" matTooltipPosition="above"
+                    <button  color="accent" mat-button mat-icon-button matTooltip="Show pipeline" matTooltipPosition="above"
                             (click)="pipelineOperationsService.showPipelineDetails(pipeline._id)"><i
                             class="material-icons">search</i>
                     </button>
                 </span>
                     <span fxFlex fxFlexOrder="2" fxLayout="row" fxLayoutAlign="center center">
-                    <button color="primary"mat-button mat-icon-button matTooltip="Modify pipeline" matTooltipPosition="above"
+                    <button color="accent" mat-button mat-icon-button matTooltip="Modify pipeline" matTooltipPosition="above"
                             [disabled]="pipeline.running"
                             (click)="pipelineOperationsService.modifyPipeline(pipeline._id)">
                         <i class="material-icons">mode_edit</i>
                     </button>
                 </span>
                     <span fxFlex fxFlexOrder="3" fxLayout="row" fxLayoutAlign="center center">
-                    <button color="primary" mat-button mat-icon-button matTooltip="Delete pipeline" matTooltipPosition="above"
+                    <button color="accent" mat-button mat-icon-button matTooltip="Delete pipeline" matTooltipPosition="above"
                             (click)="pipelineOperationsService.showDeleteDialog(pipeline, refreshPipelinesEmitter)">
                         <i class="material-icons">delete</i>
                     </button>
