--- a/ui/src/scss/sp/colors.scss
+++ b/ui/src/scss/sp/colors.scss
@@ -53,8 +53,8 @@
 
 .sp-blue-border {
     border: 3px solid var(--content-box-color);
-    padding-top:20px;
-    padding-bottom:20px;
+    //padding-top:20px;
+    //padding-bottom:20px;
 }
 
 .sp-border-left-accent-light {
