--- a/ui/src/scss/sp/main.scss
+++ b/ui/src/scss/sp/main.scss
@@ -66,11 +66,11 @@ code[class*="language-"], pre[class*="language-"] {
   left: -226px;
   top: 40px;
   z-index: 1;
-  background: white;
-  border: 2px solid $sp-color-error;
+  background: var(--color-bg-dialog);
+  border: 2px solid var(--color-warn);
   border-radius: 5px;
   width: 300px;
-  color: rgba(0,0,0,0.87);
+  color: var(--color-default-text);
   padding: 5px;
   box-shadow: 0px 7px 8px -4px rgba(0, 0, 0, 0.2), 0px 13px 19px 2px rgba(0, 0, 0, 0.14), 0px 5px 24px 4px rgba(0, 0, 0, 0.12);
 }
